changed some comments and spacing fixed some added / in <br>

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -690,8 +690,8 @@ h3.section_chart_text {
 
 div.caption { //chart caption
     color: $darkgrey;
-    font-size: 1rem;
-    line-height: 3;
+    font-size: 0.85rem;
+    line-height: 1.2;
     text-align: center;
     width:90%;
     font-weight:600;
